# finance-tracker

./: .env.example  .env.previous  .gitignore  .repomixignore  CLAUDE.md  COMPREHENSIVE_DOCUMENTATION.md  DOCKER_FIXES.md  DOCUMENTATION.md  README.md  REFACTOR_EXECUTION.md  SYNC_TODO.md  analysiscomp.md  changelog_frontend_v1.0_2025-08-06.txt  changelog_v2.0.0_2025-01-08.txt  debug-auth-flow.html  debug-auth.html  docker-compose.dev.yml  docker-compose.yml  enhanced_plaid_service.py  notestomyself.md  prompt.md  repomix.config.json  test-auth-flow.md  test_auth_comprehensive.sh  trials_v1_2025-08-07.txt
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  init.sql  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
backend/app/: config.py  database.py  database_manager.py  dependencies.py  main.py  seed_data.py
backend/app/auth/: auth_service.py  dependencies.py  middleware.py  supabase_client.py
backend/app/core/: exceptions.py  import_standards.md  redis_client.py
backend/app/middleware/: exception_handler.py
backend/app/models/: __init__.py  account.py  base.py  budget.py  budget_alert_settings.py  categorization_rule.py  categorization_rule_template.py  category.py  goal.py  ml_model.py  notification.py  plaid_recurring_transaction.py  saved_filter.py  transaction.py  user.py  user_session.py
backend/app/routes/: accounts.py  accounts_basic.py  accounts_plaid.py  accounts_reconciliation.py  accounts_sync.py  analytics.py  annotations.py  auth.py  budget.py  categories.py  categorization_rules.py  goals.py  health.py  insights.py  merchants.py  ml.py  mlcategory.py  mock.py  notifications.py  recurring.py  recurring_plaid.py  saved_filters.py  transaction.py  transactions.py  user.py  users.py  webhooks.py  websockets.py
backend/app/schemas/: account.py  account_health.py  auth.py  base.py  budget.py  categorization_rule.py  category.py  error.py  financial_health_config.py  goal.py  insight.py  ml.py  notification.py  plaid_recurring.py  recurring_transaction.py  saved_filter.py  timeline_annotation.py  transaction.py  user.py  user_preferences.py  user_session.py  validation_types.py
backend/app/scripts/: init_db.py  seed_data.py
backend/app/services/: __init__.py  account_insights_service.py  account_service.py  account_sync_monitor.py  analytics_service.py  auto_categorization_service.py  automatic_sync_scheduler.py  base_service.py  budget_service.py  category_service.py  encryption_service.py  enhanced_plaid_service.py  enhanced_reconciliation_service.py  financial_health_service.py  goal_service.py  merchant_service.py  ml_client.py  ml_service.py  mock_data_service.py  monitoring_service.py  notification_service.py  plaid_account_service.py  plaid_client_service.py  plaid_orchestration_service.py  plaid_service.py  plaid_transaction_service.py  plaid_webhook_service.py  reconciliation_service.py  recurring_detection_service.py  rule_template_service.py  transaction_analytics_service.py  transaction_import_service.py  transaction_service.py  transaction_sync_service.py  user_preferences_service.py  user_service.py  validation_service.py
backend/app/utils/: security.py  validators.py
backend/app/websocket/: events.py  manager.py  schemas.py
backend/migrations/: env.py
backend/scripts/: seed_rule_templates.py
backend/tests/: __init__.py  conftest.py  test_recurring_detection.py
docs/: abc.py  (+17 more)
(+268 files in other folders)
